--- a/src/css/components/drawer.css
+++ b/src/css/components/drawer.css
@@ -7,7 +7,7 @@
 }
 
 .drawer {
-	@apply fixed bg-white dark:bg-gray-800 shadow-lg transition-transform duration-300 ease-in-out;
+	@apply fixed bg-foreground dark:bg-foreground-dark shadow-lg transition-transform duration-300 ease-in-out;
 }
 
 .drawer::-webkit-scrollbar {
@@ -37,7 +37,8 @@
 }
 
 .drawer-close-button {
-	@apply absolute top-4 right-4;
+	@apply absolute top-4 right-4
+	focus-visible:outline-2 focus-visible:outline-primary dark:focus-visible:outline-primary-dark focus-visible:outline-offset-2 rounded-sm;
 }
 
 .drawer-body {
