--- a/src/css/components/dropdown.css
+++ b/src/css/components/dropdown.css
@@ -7,5 +7,7 @@
 }
 
 .dropdown-item {
-	@apply block px-4 py-2 text-sm text-slate-900 dark:text-slate-100 hover:bg-slate-100 dark:hover:bg-slate-800;
+	@apply block px-4 py-2 text-sm text-slate-900 dark:text-slate-100 rounded-sm
+	hover:bg-slate-100 dark:hover:bg-slate-800
+	focus-visible:outline-2 focus-visible:outline-primary dark:focus-visible:outline-primary-dark focus-visible:outline-offset-[-2px];
 }
